[BE] CRS - 17: fix feedback 2